shopage revisi lagi

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
+    "react-scroll": "^1.9.0",
     "redux": "^5.0.1",
+    "simple-parallax-js": "^5.6.2",
     "typeit-react": "^2.7.1"
   },
   "devDependencies": {
